force-app/main/default/objects/SyncLog__c/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>Order ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>