force-app/main/default/objects/SyncLog__c/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <label>Retry Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>