force-app/main/default/objects/SyncLog__c/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Retry</fullName><default>false</default><label>Retry</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>